--- a/packages/replica/package.json
+++ b/packages/replica/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@live-replica/client",
+  "name": "@live-replica/replica",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
     "dependencies": {
-        "@live-replica/diff-patch": "latest"
+        "@live-replica/patch-diff": "*",
+        "@live-replica/proxy": "*"
     },
   "author": "Barak Edry",
   "license": "Apache-2.0"
