--- a/package.json
+++ b/package.json
@@ -25,17 +25,16 @@
     "url": "https://github.com/barakedry/live-replica/issues"
   },
   "homepage": "https://github.com/barakedry/live-replica/",
-  "dependencies": {
-  },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "events": "^3.0.0",
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
     "blanket": "latest",
-    "eslint": "latest",
     "chai": "latest",
+    "eslint": "latest",
+    "events": "^3.0.0",
+    "lerna": "^3.4.3",
     "mocha": "latest",
     "node.extend": "latest",
     "webpack": "^4.16.2",
