--- a/packages/socketio-client/package.json
+++ b/packages/socketio-client/package.json
@@ -2,7 +2,7 @@
   "name": "@live-replica/socketio-client",
   "version": "1.0.0",
   "description": "web worker socket for live-replica",
-  "main": "worker-socket.js",
+  "main": "socketio-client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
