--- a/packages/persistency/package.json
+++ b/packages/persistency/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "lodash": "latest"
+  },
   "author": "Barak Edry",
   "license": "Apache-2.0"
 }
