--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@live-replica/live-replica",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "an easy to use real-time objects replica syncing",
   "directories": {
     "test": "tests"
@@ -27,20 +27,17 @@
   "homepage": "https://github.com/barakedry/live-replica/",
   "devDependencies": {
     "babel-plugin-transform-commonjs-es2015-modules": "latest",
-    "blanket": "latest",
     "chai": "latest",
-    "eslint": "latest",
     "events": "latest",
-    "lerna": "latest",
     "mocha": "latest",
     "node.extend": "latest",
     "webpack": "latest",
     "webpack-cli": "latest"
   },
   "dependencies": {
+    "@msgpack/msgpack": "latest",
     "debuglog": "latest",
-    "lodash": "latest",
-    "@msgpack/msgpack": "latest"
+    "lodash": "^4.17.15"
   },
   "main": "index.js"
 }
