--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "events": "latest",
     "mocha": "latest",
     "node.extend": "latest",
-    "webpack": "latest",
+    "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
