--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "mocha": "latest",
     "node.extend": "latest",
     "webpack": "^5.42.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "lit": "^2.0.0-rc.2"
   },
   "dependencies": {
     "@msgpack/msgpack": "latest",
     "debuglog": "latest",
-    "lit": "^2.0.0-rc.2",
     "lodash": "latest"
   },
   "main": "index.js"
