--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "proxy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Barak Edry",
   "license": "Apache-2.0"
