--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "server for live-replica.js",
   "main": "src/server.js",
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "author": "Barak Edry",
   "license": "Apache-2.0"
