--- a/packages/ws-client/package.json
+++ b/packages/ws-client/package.json
@@ -4,7 +4,7 @@
   "description": "websocket client for live-replica",
   "main": "ws-client.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@live-replica/socket": "*",
