--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,14 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
       - uses: actions/checkout@v2
-
-      - name: Set up node
-        uses: actions/setup-node@v1
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+      - uses: actions/setup-node@v1
+      - run: npm install
+      - run: npm test
