moved jest to top level + tidy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "bootstrap": "npx lerna bootstrap",
-    "test": "npx lerna run test:ci",
+    "test": "jest",
     "localtest": "grunt localtest"
   },
   "repository": "git+https://github.com/barakedry/live-replica",
