--- a/packages/socketio-server/package.json
+++ b/packages/socketio-server/package.json
@@ -4,7 +4,7 @@
   "description": "web worker server for live-replica",
   "main": "socletio-server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
       "@live-replica/server": "*",
