--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "@live-replica/live-replica",
+  "type": "module",
   "version": "0.3.6",
   "description": "an easy to use real-time objects replica syncing",
   "directories": {
