--- a/packages/cluster-worker-socket/package.json
+++ b/packages/cluster-worker-socket/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "node.js cluster worker socket for live-replica",
   "main": "cluster-worker-socket.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
