--- a/packages/persistency/package.json
+++ b/packages/persistency/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "persistency.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
