--- a/packages/socket/package.json
+++ b/packages/socket/package.json
@@ -2,6 +2,7 @@
   "name": "@live-replica/socket",
   "version": "1.0.0",
   "description": "socket abstraction for live-replica",
+  "type": "module",
   "main": "socket.js",
   "scripts": {
     "test": "jest"
