--- a/packages/worker-server/package.json
+++ b/packages/worker-server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "web worker server for live-replica",
   "main": "worker-server.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
