--- a/packages/worker-socket/package.json
+++ b/packages/worker-socket/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "web worker socket for live-replica",
   "main": "worker-socket.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
