--- a/packages/patch-diff/package.json
+++ b/packages/patch-diff/package.json
@@ -8,8 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest",
-    "localtest": "grunt localtest"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
