--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@live-replica/server": "*",
-    "@msgpack/msgpack": "^1.9.0",
-    "events": "latest"
+    "@live-replica/events": "*",
+    "@msgpack/msgpack": "^1.9.0"
   },
   "author": "",
   "license": "Apache-2.0"
