--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@live-replica/live-replica",
   "type": "module",
-  "version": "0.5.15",
+  "version": "0.5.21",
   "description": "an easy to use real-time objects replica syncing",
   "directories": {
     "test": "tests"
@@ -41,5 +41,6 @@
     "@msgpack/msgpack",
     "lodash-es"
   ],
-  "main": "index.js"
+  "main": "index.js",
+  "types": "./packages/types/index.d.ts"
 }
