--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "mocha": "latest",
     "node.extend": "latest",
     "lit": "^2.0.0-rc.2",
-    "jest": "^27.2.0"
+    "jest": "^29.7.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.0",
+    "babel-jest": "^29.7.0"
   },
   "dependencies": {
     "@msgpack/msgpack": "latest",
