--- a/package.json
+++ b/package.json
@@ -27,13 +27,10 @@
   },
   "homepage": "https://github.com/barakedry/live-replica/",
   "devDependencies": {
-    "chai": "latest",
-    "mocha": "latest",
-    "node.extend": "latest",
-    "lit": "^2.0.0-rc.2",
-    "jest": "^29.7.0",
     "@babel/plugin-transform-modules-commonjs": "^7.23.0",
-    "babel-jest": "^29.7.0"
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "lit": "^2.0.0-rc.2"
   },
   "dependencies": {
     "@msgpack/msgpack": "latest",
@@ -44,5 +41,9 @@
     "lodash-es"
   ],
   "main": "index.js",
-  "types": "./packages/types/index.d.ts"
+  "types": "./packages/types/index.d.ts",
+  "bundleDependencies": [
+    "@msgpack/msgpack",
+    "lodash-es"
+  ]
 }
