chore: added unit tests (#42)
* chore: existing tests skipped and passing, laying foundation of jest

* tests and fixes

* marked whitelisting as failing

* updated github actions node versions

* ..

* ..

* 55%

* 61%

* fix: fullpath is undefined in utils.parentPath

* fix: fullpath is undefined in utils multiple methods

* 66%

* fix: whitelist marked hasAdditions instead of hasDeletions

* chore: whitelist testing (72%)

* chore: whitelist testing (75%)

* chore: 'at' coverage, a take on the mighty splice (84%)

* commented out dead code - what are the plans for proxy cache? splice seems broken

* chore: added unit tests run configuration

* chore: added coverage to proxy (60%)

* testing github checks

* revert

* ..

--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
   },
   "homepage": "https://github.com/barakedry/live-replica/",
   "devDependencies": {
-    "chai": "latest",
-    "mocha": "latest",
-    "node.extend": "latest",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.0",
+    "babel-jest": "^29.7.0",
     "lit": "latest",
     "jest": "latest"
   },
@@ -42,5 +41,9 @@
     "lodash-es"
   ],
   "main": "index.js",
-  "types": "./packages/types/index.d.ts"
+  "types": "./packages/types/index.d.ts",
+  "bundleDependencies": [
+    "@msgpack/msgpack",
+    "lodash-es"
+  ]
 }
