chore: bump version to v0.8.0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "@live-replica/live-replica",
   "type": "module",
-  "version": "0.7.43",
+  "version": "0.8.0",
   "description": "an easy to use real-time objects replica syncing",
   "directories": {
     "test": "tests"
@@ -41,9 +41,5 @@
     "lodash-es"
   ],
   "main": "index.js",
-  "types": "./packages/types/index.d.ts",
-  "bundleDependencies": [
-    "@msgpack/msgpack",
-    "lodash-es"
-  ]
+  "types": "./packages/types/index.d.ts"
 }
