--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,3 +29,4 @@ jobs:
             - run: npm ci --if-present
             - run: npm run build --if-present
             - run: npm test
+            - run: npm audit
