--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "bootstrap-install": "npm install && lerna bootstrap --no-ci",
     "bootstrap-ci": "npm ci && lerna bootstrap",
     "test": "jest",
-    "pack": "npm version patch && npm pack"
+    "pack": "npm version patch && npm pack",
+    "prepare": "npm run build",
+    "build": "lerna run clean && tsc --build packages/events/tsconfig.json packages/utils/tsconfig.json packages/proxy/tsconfig.json packages/patch-diff/tsconfig.json",
+    "build:watch": "tsc --build --watch",
+    "clean": "lerna run clean && rimraf dist",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch"
   },
   "repository": "git+https://github.com/barakedry/live-replica",
   "keywords": [
@@ -36,12 +42,17 @@
   "homepage": "https://github.com/barakedry/live-replica/",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.0",
+    "@types/jest": "^29.5.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.17.30",
+    "@types/ws": "^8.5.0",
     "babel-jest": "^29.7.0",
     "jest": "latest",
+    "lerna": "6.6.2",
     "lit": "latest",
+    "rimraf": "^5.0.0",
     "typescript": "^5.2.2",
-    "ws": "^8.18.0",
-    "lerna": "6.6.2"
+    "ws": "^8.18.0"
   },
   "dependencies": {
     "@msgpack/msgpack": "latest",
@@ -49,7 +60,7 @@
   },
   "main": "index.js",
   "types": "./packages/types/index.d.ts",
-  "bundledDependencies": [
+  "bundleDependencies": [
     "@msgpack/msgpack",
     "lodash-es"
   ]
