--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@live-replica/proxy",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
-  "main": "proxy.js",
+  "main": "dist/index.js",
   "type": "module",
-  "dependencies": {},
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@live-replica/utils": "^0.1.0"
+  },
   "scripts": {
-    "test": "jest"
+    "prepare": "npm run build",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "clean": "rimraf dist"
   },
   "author": "Barak Edry",
   "license": "Apache-2.0"
