--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,12 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+# Distribution directories
+dist/
+
+# TypeScript build info
+*.tsbuildinfo
+
 # Dependency directories
 node_modules/
 jspm_packages/
