--- a/packages/ws-client/package.json
+++ b/packages/ws-client/package.json
@@ -2,15 +2,20 @@
   "name": "@live-replica/ws-client",
   "version": "1.0.0",
   "description": "websocket client for live-replica",
-  "main": "ws-client.js",
+  "main": "dist/ws-client.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@live-replica/socket": "*",
     "@live-replica/events": "*",
     "@msgpack/msgpack": "^2.8.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0"
   },
   "author": "",
   "license": "Apache-2.0"
