--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "@babel/plugin-transform-modules-commonjs": "^7.23.0",
     "babel-jest": "^29.7.0",
     "jest": "latest",
+    "lerna": "6.6.2",
     "lit": "latest",
-    "typescript": "^5.2.2",
-    "ws": "^8.18.0",
-    "lerna": "6.6.2"
+    "typescript": "^5.8.3",
+    "ws": "^8.18.0"
   },
   "dependencies": {
     "@msgpack/msgpack": "latest",
@@ -50,6 +50,10 @@
   "main": "index.js",
   "types": "./packages/types/index.d.ts",
   "bundledDependencies": [
+    "@msgpack/msgpack",
+    "lodash-es"
+  ],
+  "bundleDependencies": [
     "@msgpack/msgpack",
     "lodash-es"
   ]
