--- a/packages/socket/package.json
+++ b/packages/socket/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "socket abstraction for live-replica",
   "type": "module",
-  "main": "socket.js",
-  "dependencies": {},
+  "main": "dist/socket.js",
+  "types": "dist/socket.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc -p ."
   },
   "author": "",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@types/jest": "^29.5.14"
+  }
 }
