--- a/packages/socketio-client/package.json
+++ b/packages/socketio-client/package.json
@@ -13,6 +13,6 @@
       "@live-replica/socket": "*",
       "@live-replica/events": "*"
   },
-  "author": "",
+  "author": "Barak Edry",
   "license": "Apache-2.0"
 }
