--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -15,6 +15,6 @@
     "@live-replica/events": "*",
     "@msgpack/msgpack": "^2.8.0"
   },
-  "author": "",
+  "author": "Barak Edry",
   "license": "Apache-2.0"
 }
