migrate proxy package

--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@live-replica/proxy",
   "version": "1.0.0",
-  "description": "",
-  "main": "proxy.js",
+  "description": "Proxy utilities for live-replica",
+  "main": "dist/proxy.js",
+  "types": "dist/proxy.d.ts",
   "type": "module",
   "dependencies": {},
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc -p ."
   },
   "author": "Barak Edry",
   "license": "Apache-2.0"
