--- a/packages/patch-diff/package.json
+++ b/packages/patch-diff/package.json
@@ -29,5 +29,13 @@
   "homepage": "https://github.com/barakedry/live-replica/diff-patch",
   "dependencies": {
     "lodash": "latest"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.1",
+    "@types/lodash-es": "^4.17.12",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2"
   }
 }
